--- a/prjRefugioAnimal/src/main/java/Presentacion/FrmLogin.form
+++ b/prjRefugioAnimal/src/main/java/Presentacion/FrmLogin.form
@@ -46,7 +46,7 @@
               <Component id="btnEntrar" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace min="23" pref="166" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
